[package]
name = "i18n-rs"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
strict = []

[dependencies]
arc-swap = "1.3.0"
once_cell = "1.7.2"
i18n-macro = { version = "0.1", path = "./i18n-macro" }

[build-dependencies]
i18n-load-locale = { version = "*", path = "./i18n-load-locale" }
