[package]
name = "i18n-load-locale"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
toml = "0.5.8"
