[package]
name = "i18n-macro"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.72"
quote = "1.0.9"
i18n-load-locale = { version = "*", path = "../i18n-load-locale" }
proc-macro2 = "1"
once_cell = "1"

[lib]
proc-macro = true
