[package]
name = "i18n-macro"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.72"
quote = "1.0.9"
proc-macro2 = "1"
once_cell = "1"
anyhow = "1.0"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
toml = "0.5.8"

[lib]
proc-macro = true
