[package]
name = "i18n-macro"
description = "A simple compile time i18n implementation in Rust."
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/juzi5201314/i18n-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.72"
quote = "1.0.9"
proc-macro2 = "1"
once_cell = "1"
anyhow = "1.0"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
toml = "0.5.8"
i18n-find-locale = { version = "*", path = "../i18n-find-locale" }

[lib]
proc-macro = true
