[package]
name = "simple-i18n"
description = "A simple compile time i18n implementation in Rust."
version = "0.1.1"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/juzi5201314/i18n-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.3.0"
once_cell = "1.7.2"
i18n-macro = { version = "0.1", path = "../i18n-macro" }

[dev-dependencies.criterion]
version = "0.3"

[build-dependencies]
i18n-find-locale = { version = "0.1", path = "../i18n-find-locale" }

[[bench]]
name = "benchmark"
harness = false
